--- a/resid.Rmd
+++ b/resid.Rmd
@@ -25,9 +25,9 @@ aids = aids %>%
 
 
 aids <- aids %>% 
-    mutate(knot_term1 = if_else(treatment == 4, occasion^2, 0)) %>% 
+    mutate(knot_term1 = if_else(treatment == 4 & occassion < 16, occasion^2, occasion)) %>% 
     relocate(knot_term1, .after = occasion)
-
+aids
 ctrl <- lmeControl(opt = 'optim')
 model_spline2 = lme(log_cd4 ~ occasion + 
              treatment:occasion + age + knot_term1, data = aids,
@@ -37,7 +37,9 @@ model_spline2 = lme(log_cd4 ~ occasion +
 summary(model_spline2)
 ```
 
+#residual Analysis
 ```{r}
 
+model2_spli
 ```
 
