--- a/Stats 112 Group Project.Rmd
+++ b/Stats 112 Group Project.Rmd
@@ -296,6 +296,8 @@ model_quadratic = lme(log_cd4 ~ occasion + I(occasion^2) +
              random = ~ occasion + I(occasion^2)| id,
              method = "ML")
 
+summary(model_quadratic)
+
 anova(model_linear, model_quadratic)
 ```
 $H_0:$ the reduced model without quadratic terms are better
@@ -332,8 +334,16 @@ Because the AIC of model_no_squared = 12049.15 is less than the AIC of model_spl
 Spline Model: $E(Y_{ij}|b_i) = \beta_1 + \beta_2occasion_{ij} + \beta_3age_{ij} + \beta_4(occasion^2_{ij})_+ + \beta_5occasion_{ij}treatment2 + \beta_6occasion_{ij}treatment3 + \beta_7occasion_{ij}treatment4 + b_{1i} + b_{2i}occasion_{ij} + b_{3i}(occasion^2_{ij})_+$   
 ```{r}
 aids <- aids %>% 
-    mutate(knot_term1 = if_else(occasion > 20, occasion^2, 0)) %>% 
+    mutate(knot_term1 = if_else(treatment == 4, occasion^2, 0)) %>% 
     relocate(knot_term1, .after = occasion)
+
+ctrl <- lmeControl(opt = 'optim')
+model_spline2 = lme(log_cd4 ~ occasion + 
+             treatment:occasion + age + knot_term1, data = aids,
+             random = ~ occasion | id,
+             method = "ML",
+             control = ctrl)
+summary(model_spline2)
 
 ctrl <- lmeControl(opt = 'optim')
 model_spline1 = lme(log_cd4 ~ occasion + 
