--- a/Stats 112 Group Project.Rmd
+++ b/Stats 112 Group Project.Rmd
@@ -222,7 +222,7 @@ model1 = lme(log_cd4 ~ occasion + I(occasion^2) +
 
 summary(model1)
 ```
-Because it is a randomized experiment we do not need the group effect of treatment and therefore treatmetn could be removed in the model
+Because it is a randomized experiment we do not need the group effect of treatment and therefore treatment could be removed in the model
 
 
 
