--- a/GEE and GLME.Rmd
+++ b/GEE and GLME.Rmd
@@ -10,6 +10,8 @@ output: html_document
 library(tidyverse)
 library(geepack)
 library(nlme)
+library(glme)
+library(lme4)
 ```
 
 ```{r}
@@ -20,5 +22,29 @@ aids = aids %>%
   mutate(occasion = ceiling(week),
          gender = factor(gender, level = c("male", "female")),
          treatment = as.factor(treatment))
+
+
+aids = aids %>% 
+  mutate(counts = exp(log_cd4) - 1) %>% 
+  mutate(counts2 = round(counts))
+
 ```
+
+
+log_cd4 ~ occasion + I(occasion^2) + 
+             treatment:occasion + treatment:I(occasion^2)
+               +  age
+               
+```{r}
+model = glmer(counts2 ~ occasion + I(occasion ^ 2) + treatment:occasion + treatment:I(occasion^2) + age + (1 | id), 
+              data = aids,
+              family = poisson,
+              control = glmerControl(optimizer="bobyqa", optCtrl=list(maxfun=2e5)),
+              nAGQ = 500,
+              na.action = na.omit)
+```
+
+
+
+
 
