finished gee and glme

--- a/GEE and GLME.Rmd
+++ b/GEE and GLME.Rmd
@@ -2,7 +2,7 @@
 title: "GEE and GLME"
 author: "Jay, Alec, Lynn"
 date: "5/27/2021"
-output: html_document
+output: pdf_document
 ---
 
 
@@ -73,14 +73,6 @@ $H_0$: the reduced model with only a random intercept is adequate.
 Because the p-value < 2.2e-16, is less than $\alpha = 0.05$, we reject the null and conclude that the model with both the random intercept and the random slope fits the data better.  
 
 We will also compare these models to the quadratic model previously.  
-```{r}
-model_quadratic = lme(log_cd4 ~ occasion + I(occasion^2) + 
-             treatment:occasion + treatment:I(occasion^2)
-               +  age, data = aids,
-             random = ~ occasion | id,
-             method = "ML")
-summary(model_quadratic)
-```
 
 ```{r}
 model_quadratic2 = lme(log_cd4 ~ occasion + I(occasion^2) + 
@@ -95,5 +87,5 @@ summary(model_quadratic2)
 ```
 Comparing the AIC of the GLME model with our previous LME model:  
 - GLME AIC = 52553.6   
-- LME AIC = 11888.81  
+- LME AIC = 11888.81   
 Because the GLME AIC is greater than the LME AIC, we can conclude that the LME model we created previously is better (fits the data better) than the GLME.  
